--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,29 +3,34 @@ name: Python Tests
 on:
   push:
     branches:
-      - main  # Trigger on push to the main branch
+      - main  # Trigger the workflow on push to the main branch
   pull_request:
     branches:
-      - main  # Trigger on pull request to the main branch
+      - main  # Trigger the workflow on pull requests targeting the main branch
 
 jobs:
   test:
-    runs-on: ubuntu-latest  # The runner environment
+    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
 
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v2  # Checkout the code
+      # Step 1: Checkout the code
+      - name: Checkout code
+        uses: actions/checkout@v2
 
+      # Step 2: Set up Python (latest version)
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 'latest'  # Set the Python version
+          python-version: 'latest'  # Set Python to the latest version
 
+      # Step 3: Install dependencies from requirements.txt
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip  # Upgrade pip
-          pip install -r requirements.txt  # Install dependencies from requirements.txt
+          python -m pip install --upgrade pip  # Upgrade pip to the latest version
+          pip install -r requirements.txt  # Install the dependencies from requirements.txt
 
+      # Step 4: Run tests located in the /tests directory
       - name: Run tests
         run: |
-          pytest /tests  # Run the tests in the /tests directory
+          pytest tests/  # Run tests located in the /tests directory
+
