--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,36 +1,38 @@
-name: Python Tests
+name: Run Tests
 
 on:
   push:
     branches:
-      - main  # Trigger the workflow on push to the main branch
+      - main
   pull_request:
     branches:
-      - main  # Trigger the workflow on pull requests targeting the main branch
+      - main
 
 jobs:
   test:
-    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        python-version: [3.10]
 
     steps:
-      # Step 1: Checkout the code
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      # Step 2: Set up Python (latest version)
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.x'  # Use the latest Python 3.x version
+          python-version: ${{ matrix.python-version }}
 
-      # Step 3: Install dependencies from requirements.txt
+      - name: Check Python version
+        run: python --version
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip  # Upgrade pip to the latest version
-          pip install -r requirements.txt  # Install the dependencies from requirements.txt
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      # Step 4: Run tests located in the /tests directory
       - name: Run tests
         run: |
-          pytest tests/  # Run tests located in the /tests directory
-
+          if [ -f pytest.ini ] || [ -d tests ]; then pytest; fi
